<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/FullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/Full_Name"/>

    <TextView
        android:id="@+id/Birth_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/Birth_Date"/>

    <TextView
        android:id="@+id/StreetAddress"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/Street_Address"/>

    <TextView
        android:id="@+id/City_State_Zip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:textSize="25dp"
    android:text="@string/City_State_Zip"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Click"
        android:text="@string/display_to_phone"/>

    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Click"
        android:text="@string/Retrieve"/>

</LinearLayout>